[gd_scene load_steps=5 format=3 uid="uid://c0aajuspdrjgp"]

[ext_resource type="PackedScene" uid="uid://co5tlnjxavdlw" path="res://scenes/cards/card_base.tscn" id="1_pu0vu"]
[ext_resource type="Script" path="res://scripts/cards/card_customer.gd" id="2_ucatu"]
[ext_resource type="Texture2D" uid="uid://bfj1yg3rrly4h" path="res://images/card/customer/card_customer_background.png" id="3_ddycu"]

[sub_resource type="LabelSettings" id="LabelSettings_4jwxj"]
font_size = 170
font_color = Color(0.356846, 0.308953, 0.891672, 1)

[node name="CardCustomer" instance=ExtResource("1_pu0vu")]
script = ExtResource("2_ucatu")

[node name="BackgroundSprite" parent="." index="0"]
texture = ExtResource("3_ddycu")

[node name="PatienceLabel" type="Label" parent="." index="2"]
offset_left = -268.0
offset_top = -150.0
offset_right = 268.0
offset_bottom = 150.0
theme_override_font_sizes/font_size = 200
text = "60"
horizontal_alignment = 1
vertical_alignment = 1

[node name="PatienceTimer" type="Timer" parent="." index="3"]
autostart = true

[node name="OrderedMenu" type="Label" parent="." index="5"]
offset_left = -259.0
offset_top = 128.0
offset_right = 237.0
offset_bottom = 409.0
size_flags_vertical = 6
label_settings = SubResource("LabelSettings_4jwxj")
